--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "openlayers": "~2.13.1",
+    "openlayers": "release-2.13.1",
     "angular-grid": "~2.0.7",
     "angular-bootstrap": "~0.10.0",
     "jquery-ui": "~1.10.3",
@@ -21,5 +21,8 @@
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "jquery": ">= 1.7"
   }
 }
